feat: implement ValidationUtils and add comprehensive test suite for foundation and business-suite modules